Just made some changes!

--- a/Mine.html
+++ b/Mine.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <h>This is probably mys econd or third project</h> 
+   <h>This is probably my second or third project</h> 
+   <p>And i am having the time of my life!</p>
 </body>
 </html>
